# acp-to-api

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI_BACKEND_CONFIG.md  LICENSE  README.md  acp-to-api.toml  justfile  pyproject.toml  test-cursor-config.toml  test_end_to_end_complex_openai_sdk.py
.codex/: config.toml
.github/workflows/: ci.yml  publish.yml
experiments/: claude_code_sdk_hello_world.py  langgraph_basic_research.py  openai_image_explain.py  openai_pdf_explain.py  pydantic_ai_basic_research.py  test_end_to_end_complex_openai_sdk.py  test_end_to_end_openai_sdk.py
src/acp_to_api/: __init__.py  cli.py  config.py  daemon.py  dashboard.py  dirs.py  openai_models.py  registry.py  server.py  service.py
src/acp_to_api/providers/: __init__.py  base.py  cursor_acp.py
tests/: conftest.py  test_e2e_ag2_agentic.py  test_e2e_cursor.py  test_e2e_daemon.py  test_e2e_langchain_agent.py  test_e2e_openai_sdk_comprehensive.py  test_langgraph_agentic.py  test_provider_restart_logic.py  test_pydantic_ai_agentic.py
