[project]
name = "acp-to-api"
version = "0.1.0"
description = "Multi-provider ACP to OpenAI-compatible proxy CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = [{ name = "acp-to-api contributors" }]
keywords = ["acp", "openai", "proxy", "agent-client-protocol", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "agent-client-protocol>=0.9.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "sse-starlette>=2.1.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Repository = "https://github.com/acp-to-api/acp-to-api"

[project.scripts]
acp-to-api = "acp_to_api.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
